fix flex on intro section with grow/shrink and alignments

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * { 
     font-family: Arial, Helvetica, sans-serif;
     margin: 0px; 
-    /* border: 1px red solid;  */
+    border: 1px red solid; 
 }
 
 h1 { 
@@ -23,8 +23,8 @@ header {
 .introduction {
     display: flex; 
     align-items: flex-start;
-    flex: 1; 
-    padding: 50px; 
+    flex: 0; 
+    padding: 50px;  
     flex-wrap: wrap; 
 
 }
@@ -47,25 +47,29 @@ a {
 }
 
 img { 
-    width: 350px; 
+    width: 20em; 
     height: auto; 
+    margin-left: auto;
+    flex: 1 1 2%;
+    padding: 0% 5%;
 }
 
-/* 
+
 .intro2 { 
     display: flex; 
-   flex: 2;
-} */
+    justify-content: flex-start;;
+    align-items: flex-start; 
+   flex-wrap: wrap; 
+   max-width: 50em;
+   flex: 1 1; 
+}
 
 button { 
     background-color: #3882F6;
     color: #F9FAF8; 
-    margin-top: 25px; 
+    margin-top: 25px;
+    margin-bottom: 25px;  
     padding: 10px 15px; 
     width: 100px; 
     border-radius: 8px;
-}
-
-p { 
-   width: 40em;
 }
